--- a/style.css
+++ b/style.css
@@ -240,7 +240,7 @@ div.backtotopbutton i {
   margin: 20px 0px;
 }
 
-@media screen and (max-width: 719px) {
+@media screen and (max-width: 766px) {
   nav ul.desktop {
     display: none;
   }
@@ -354,7 +354,7 @@ div.backtotopbutton i {
     flex-direction: column;
   }
   footer div.nav-links ul.business-info {
-    align-items: flex-start;
+    align-items: center;
     padding: 0px 10px;
     margin: 20px 0px;
   }
@@ -374,6 +374,7 @@ div.backtotopbutton i {
     font-size: 1rem;
     padding: 20px;
     margin-bottom: 40px;
+    align-items: center;
   }
   footer div.subscribe label {
     text-transform: uppercase;
@@ -722,7 +723,7 @@ div.backtotopbutton i {
     margin-bottom: 20px;
   }
 }
-@media screen and (min-width: 720px) {
+@media screen and (min-width: 767px) {
   nav div.container ul.desktop {
     display: flex;
   }
